# rt1_model

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  codecov.yml  paper.bib  paper.md  pyproject.toml
.github/workflows/: Publish_to_PyPi.yml  test_rt1.yml
.virtual_documents/examples/: fit_static_parameters.ipynb  fit_timeseries.ipynb
docs/: api_reference.rst  bibliography.bib  conf.py  contribution_guide.rst  doc_env.yml  examples.rst  index.rst  installation.rst  model_specification.rst  rt1_dev.yml  theory.rst
docs/examples/: analyzemodel.ipynb  analyzemodel.py  example_fn.ipynb  fit_multi_temporal.ipynb  fit_parameter_functions.ipynb  fit_static_parameters.ipynb  fit_static_parameters.py  fit_timeseries.ipynb  fit_timeseries_with_aux_data.ipynb  linear_combinations.ipynb  number_of_expansion_coefficients.ipynb  retrieval_1_static_parameters.ipynb  retrieval_2_timeseries.ipynb  retrieval_3_multi_parameter.ipynb  retrieval_3_multi_temporal.ipynb  retrieval_4_parameter_functions.ipynb  retrieval_5_timeseries_with_aux_data.ipynb  retrieval_6_multi_temporal_parameters.ipynb
examples/: analyzemodel.ipynb  analyzemodel.py  fit_static_parameters.ipynb  fit_timeseries.ipynb  fit_timeseries.py
src/: README.md  pyproject.toml
src/rt1/: plot.py
src/rt1_model/: __init__.py  _calc.py  _derivatives.py  _numpydoc_docscrape.py  _scatter.py  helpers.py  plot.py  surface.py  volume.py
tests/: test_calc.py  test_env.yml  test_fn_coefs.py  test_notebooks.py  test_volume_surface.py
